# rust-huggingface-chat-ui

./: .env.example  .gitignore  Cargo.toml  FEATURES.md  FIX_NOTES.md  README.md  SCROLL_AND_LOADER_IMPROVEMENTS.md  WORKING_CONFIGS.md
specs/: CHANGES_SUMMARY.md  LATEST_IMPROVEMENTS.md  QUICKSTART.md  TROUBLESHOOTING.md
src/: app.rs  config.rs  event_handler.rs  lib.rs  main.rs  markdown.rs  types.rs  ui.rs
src/widgets/: help.rs  loading.rs  mod.rs
