[package]
name = "hugging-code"
version = "0.1.0"
edition = "2021"
authors = ["Your Name"]
description = "A modern TUI-based AI coding assistant powered by Hugging Face models"
license = "MIT"

[dependencies]
openai-api-rs = "2.1"
crossterm = "0.28"
ratatui = "0.28"
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
anyhow = "1.0"
regex = "1.10"
pulldown-cmark = "0.12"
chrono = { version = "0.4", features = ["serde"] }
syntect = "5.0"
